==> bazhen-paseka/nRF24L01-f446/Drivers/NRF24L01/NRF24L01.c <==
#include "NRF24L01.h"

uint8_t NRF24L01_Init(SPI_HandleTypeDef * hspi, uint8_t channel, uint8_t payload_size) {
	/* Initialize CE and CSN pins */
	NRF24L01_InitPins();
	
	/* Initialize SPI */
	NRF24L01_hspi = hspi;
	
	/* Max payload is 32bytes */
	if (payload_size > 32) {
		payload_size = 32;
	}
	
	/* Fill structure */
	NRF24L01_Struct.Channel = !channel; /* Set channel to some different value for NRF24L01_SetChannel() function */
	NRF24L01_Struct.PayloadSize = payload_size;
	NRF24L01_Struct.OutPwr = NRF24L01_OutputPower_0dBm;
	NRF24L01_Struct.DataRate = NRF24L01_DataRate_2M;
	
	/* Reset nRF24L01+ to power on registers values */
	NRF24L01_SoftwareReset();
	
	/* Channel select */
	NRF24L01_SetChannel(channel);
	
	/* Set pipeline to max possible 32 bytes */
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P0, NRF24L01_Struct.PayloadSize); // Auto-ACK pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P1, NRF24L01_Struct.PayloadSize); // Data payload pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P2, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P3, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P4, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P5, NRF24L01_Struct.PayloadSize);
	
	/* Set RF settings (2mbps, output power) */
	NRF24L01_SetRF(NRF24L01_Struct.DataRate, NRF24L01_Struct.OutPwr);
	
	/* Config register */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG);
	
	/* Enable auto-acknowledgment for all pipes */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_AA, 0x3F);
	
	/* Enable RX addresses */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_RXADDR, 0x3F);

	/* Auto retransmit delay: 1000 (4x250) us and Up to 15 retransmit trials */
	NRF24L01_WriteRegister(NRF24L01_REG_SETUP_RETR, 0x4F);
	
	/* Dynamic length configurations: No dynamic length */
	NRF24L01_WriteRegister(NRF24L01_REG_DYNPD, (0 << NRF24L01_DPL_P0) | (0 << NRF24L01_DPL_P1) | (0 << NRF24L01_DPL_P2) | (0 << NRF24L01_DPL_P3) | (0 << NRF24L01_DPL_P4) | (0 << NRF24L01_DPL_P5));
	
	/* Clear FIFOs */
	NRF24L01_Flush_TX();
	NRF24L01_Flush_RX();
	
	/* Clear interrupts */
	NRF24L01_Clear_Interrupts();
	
	/* Go to RX mode */
	NRF24L01_PowerUpRx();
	
	/* Return OK */
	return 1;
}

uint8_t NRF24L01_ReadRegister(uint8_t reg) {
	uint8_t readval;
	uint8_t writeval = NRF24L01_NOP_MASK;
	uint8_t address = NRF24L01_READ_REGISTER_MASK(reg);
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	HAL_SPI_TransmitReceive(NRF24L01_hspi, &writeval, &readval, 1, NRF24L01_SPI_TIMEOUT);
	NRF24L01_CSN_HIGH();
	return readval;
}

void NRF24L01_ReadRegisterMulti(uint8_t reg, uint8_t* data, uint8_t count) {
	uint8_t writeval = NRF24L01_NOP_MASK;
	uint8_t address = NRF24L01_READ_REGISTER_MASK(reg);
	uint8_t index = 0;
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	while (index < count) {
		HAL_SPI_TransmitReceive(NRF24L01_hspi, &writeval, data+index, 1, NRF24L01_SPI_TIMEOUT);
		index++;
	}
	NRF24L01_CSN_HIGH();
}

void NRF24L01_WriteRegister(uint8_t reg, uint8_t value) {
	uint8_t address = NRF24L01_WRITE_REGISTER_MASK(reg);
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	HAL_SPI_Transmit(NRF24L01_hspi, &value, 1, NRF24L01_SPI_TIMEOUT);
	NRF24L01_CSN_HIGH();
}

void NRF24L01_WriteRegisterMulti(uint8_t reg, uint8_t *data, uint8_t count) {
	uint8_t address = NRF24L01_WRITE_REGISTER_MASK(reg);
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	while(count--) {
		HAL_SPI_Transmit(NRF24L01_hspi, data++, 1, NRF24L01_SPI_TIMEOUT);
	}
	NRF24L01_CSN_HIGH();
}

void NRF24L01_PowerUpRx(void) {
	/* Disable RX/TX mode */
	NRF24L01_CE_LOW();
	/* Clear RX buffer */
	NRF24L01_Flush_RX();
	/* Clear interrupts */
	NRF24L01_Clear_Interrupts();
	/* Setup RX mode */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG | 1 << NRF24L01_PWR_UP | 1 << NRF24L01_PRIM_RX);
	/* Start listening */
	NRF24L01_CE_HIGH();
}

void NRF24L01_Transmit(uint8_t *data) {
	uint8_t count = NRF24L01_Struct.PayloadSize;

	/* Chip enable put to low, disable it */
	NRF24L01_CE_LOW();
	
	/* Go to power up tx mode */
	NRF24L01_PowerUpTx();
	
	/* Clear TX FIFO from NRF24L01+ */
	NRF24L01_Flush_TX();
	
	/* Send payload to nRF24L01+ */

	uint8_t address = NRF24L01_W_TX_PAYLOAD_MASK;
	NRF24L01_CSN_LOW();
	/* Send write payload command */
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	/* Fill payload with data*/
	while(count--) {
		HAL_SPI_Transmit(NRF24L01_hspi, data++, 1, NRF24L01_SPI_TIMEOUT);
	}
	/* Pull up chip select */
	NRF24L01_CSN_HIGH();
	
	/* Send data! */
	NRF24L01_CE_HIGH();
}

void NRF24L01_GetData(uint8_t* data) {

	uint8_t writeval = NRF24L01_NOP_MASK;
	uint8_t address = NRF24L01_R_RX_PAYLOAD_MASK;
	uint8_t index = 0;
	/* Pull down chip select */
	NRF24L01_CSN_LOW();
	/* Send read payload command*/
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	/* Read payload */
	while (index < NRF24L01_Struct.PayloadSize) {
		HAL_SPI_TransmitReceive(NRF24L01_hspi, &writeval, data+index, 1, NRF24L01_SPI_TIMEOUT);
		index++;
	}
	/* Pull up chip select */
	NRF24L01_CSN_HIGH();
	
	/* Reset status register, clear RX_DR interrupt flag */
	NRF24L01_WriteRegister(NRF24L01_REG_STATUS, (1 << NRF24L01_RX_DR));
}

uint8_t NRF24L01_GetStatus(void) {
	uint8_t status;
	uint8_t writeval = NRF24L01_NOP_MASK;
	NRF24L01_CSN_LOW();
	/* First received byte is always status register */
	HAL_SPI_TransmitReceive(NRF24L01_hspi, &writeval, &status, 1, NRF24L01_SPI_TIMEOUT);
	/* Pull up chip select */
	NRF24L01_CSN_HIGH();
	return status;
}

void NRF24L01_Flush_TX(void) {
	uint8_t address = NRF24L01_FLUSH_TX_MASK;
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	NRF24L01_CSN_HIGH();
}

void NRF24L01_Flush_RX(void){
	uint8_t address = NRF24L01_FLUSH_RX_MASK;
	NRF24L01_CSN_LOW();
	HAL_SPI_Transmit(NRF24L01_hspi, &address, 1, NRF24L01_SPI_TIMEOUT);
	NRF24L01_CSN_HIGH();
}
